Replace base image:  ubuntu:impish -> build-harbor.alauda.cn/ops/ubuntu:21.10  buildpack-deps:impish-scm -> build-harbor.alauda.cn/devops/buildpack-deps:21.0-scm

--- a/ubuntu/impish/scm/Dockerfile
+++ b/ubuntu/impish/scm/Dockerfile
@@ -8,6 +8,7 @@ FROM build-harbor.alauda.cn/devops/buildpack-deps:21.10-curl
 
 # procps is very common in build systems, and is a reasonably small package
 RUN apt-get update && apt-get install -y --no-install-recommends \
+		bzr \
 		git \
 		mercurial \
 		openssh-client \
