--- a/ubuntu/impish/scm/Dockerfile
+++ b/ubuntu/impish/scm/Dockerfile
@@ -4,7 +4,7 @@
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
 
-FROM build-harbor.alauda.cn/devops/buildpack-deps:21.10-curl
+FROM buildpack-deps:impish-curl
 
 # procps is very common in build systems, and is a reasonably small package
 RUN apt-get update && apt-get install -y --no-install-recommends \
