--- a/ubuntu/impish/curl/Dockerfile
+++ b/ubuntu/impish/curl/Dockerfile
@@ -4,7 +4,7 @@
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
 
-FROM build-harbor.alauda.cn/ops/ubuntu:21.10
+FROM ubuntu:impish
 
 RUN set -eux; \
 	apt-get update; \
